avoid overflow

--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@ Use it to make something cool, have fun, and share what you've learned with othe
  * ----------------------------------------------------------------------------
  */
 
+body { overflow-x: hidden; }
+
 html,
 button,
 input,
